--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
       property="og:url"
       content="https://あなたのユーザ名.github.io/assessment/assessment.html"
     >
-    <meta property="og:title" content="あなたのいいところ診断">
+    <meta property="og:title" content="あなたのいいところを診断します">
     <meta
       property="og:description"
       content="ZEN Studyプログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
